@@ -15,6 +15,8 @@ added addition debugging support for various structures
 
 user and channel names are now case insensitive
 
+internal library size is now stored in kilobytes to avoid rounding errors
+
 Changes from 0.07
 =================
 
